# Mirrulations_Search

./: .coveragerc  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  access_database.py  default.conf  dev_down.py  dev_down.sh  dev_up.py  dev_up.sh  docker-compose.yml  down.sh  kickoff_app.py  mongoDB.py  my_database.db  package-lock.json  package.json  pytest.ini  query.py  requirements.txt  start.sh  test_AUTOMATION.md  test_nothing.py  up.sh
.github/workflows/: deploy-to-ec2.yml  deploy-to-lambda.yml  webapp-testing.yml
api/: .dockerignore  .pylintrc  Dockerfile  Makefile  down.sh  setup.cfg  setup.py  up.sh
api/src/: app.py
api/src/database/: mongoDB.py
api/src/mirrsearch/api/: app.py  database_manager.py  mock_database_manager.py  mock_query_manager.py  mongoManager.py  mongo_manager.py  mongo_queries.py  query_manager.py
api/src/mirrsearch/db/: mongo_db.py  s3_to_mongo_db.py
api/tests/: test_app.py  test_database_manager.py  test_mongo_manager.py  test_query_manager.py
deploy/: build.sh
docs/: API.md  README.md  ci-cd.md  development.md  knownIssues.md  pagination.md  production.md
frontend/: .eslintrc.js  .eslintrc.json  .prettierignore  .prettierrc.json  Dockerfile  README.md  package-lock.json  package.json  server.js
frontend/public/: index.html
frontend/src/: App.css  App.js  App.test.js  (+3 more)
kickoff_webapp/: requirements.txt
lambda/: lambda_function.py
nginx/: default.conf
react-app/: Dockerfile  package.json
scripts/: dev_down.py  kickoff_app.py
server/: package.json
static/: script.js  style.css
templates/: index.html
(+27 files in other folders)
